--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="page"> 
 
     <header class="header">
-      <img src="Images/__logo.png" class="header__logo" alt="Лого в виде карты России"> 
+      <img src="Images/logo__header.svg" class="header__logo" alt="Лого в виде карты России"> 
       <div class="header__lang-links">
         <a href="#" class="header__lang-link header__lang-link_active" lang="ru">Ru</a>
         <a href="#" class="header__lang-link" lang="en">En</a>
