--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="header">
       <img src="Images/logo__header.svg" class="header__logo" alt="Лого в виде карты России"> 
       <div class="header__lang-links">
-        <a href="#" class="header__lang-link header__lang-link_active" lang="ru">Ru</a>
-        <a href="#" class="header__lang-link" lang="en">En</a>
+        <a href="#" target="_blank" class="header__lang-link header__lang-link_active" lang="ru">Ru</a>
+        <a href="#" target="_blank" class="header__lang-link" lang="en">En</a>
       </div>
     </header>  
 
@@ -57,7 +57,7 @@
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">park-kosa.ru</a>
+                <a class="place__link" target="_blank" href="#" target="_blank">park-kosa.ru</a>
             </div>
             <img class="place__image" alt="Изображение моря" src="Images/20.png">
             <div class="place__paragraphs">
@@ -69,7 +69,7 @@
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">National Geographic</a>
+                <a class="place__link" target="_blank" href="#" target="_blank">National Geographic</a>
             </div>
             <img class="place__image" alt="Изображение заснеженных гор" src="Images/21.png">
             <div class="place__paragraphs">
@@ -84,7 +84,7 @@
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">Facebook</a>
+                <a class="place__link" target="_blank" href="#" target="_blank">Facebook</a>
             </div>
             <img class="place__image" alt="Изображение леса" src="Images/22.png">
             <div class="place__paragraphs">
@@ -98,7 +98,7 @@
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">https://vk.com/baikalmile</a>
+                <a class="place__link" target="_blank" href="#" target="_blank">https://vk.com/baikalmile</a>
             </div>
             <img class="place__image" alt="Изображение льда" src="Images/23.png">
             <div class="place__paragraphs">
@@ -113,7 +113,7 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">http://vodlozero.ru/</a>
+                <a class="place__link" target="_blank" href="#" target="_blank">http://vodlozero.ru/</a>
             </div>
             <img class="place__image" alt="Изображение реки и леса" src="Images/24.png">
             <div class="place__paragraphs">
