--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="page"> 
 
     <header class="header">
-      <img src="Images/logo__header.svg" class="header__logo" alt="Лого в виде карты России"> 
+      <img src="images/logo__header.svg" class="header__logo" alt="Лого в виде карты России"> 
       <div class="header__lang-links">
         <a href="#" target="_blank" class="header__lang-link header__lang-link_active" lang="ru">Ru</a>
         <a href="#" target="_blank" class="header__lang-link" lang="en">En</a>
@@ -21,7 +21,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__figure">
-        <img src="Images/__image.png" class="lead__image" alt="Фотография девушки в поезде с видом в окно">
+        <img src="images/__image.png" class="lead__image" alt="Фотография девушки в поезде с видом в окно">
         <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
     </section>     
@@ -39,18 +39,18 @@
     </div>
 
     <section class="photo-grid">
-        <img class="photo-grid__item" src="Images/1.png" alt="Изображение вида из окна поезда">
-        <img class="photo-grid__item" src="Images/2.png" alt="Изображение горных вершин в облаках">
-        <img class="photo-grid__item" src="Images/3.png" alt="Изображение рассвета в поле">
-        <img class="photo-grid__item" src="Images/4.png" alt="Изображение туманного леса">
-        <img class="photo-grid__item" src="Images/5.png" alt="Изображние авто на льду">
-        <img class="photo-grid__item" src="Images/6.png" alt="Изображение пляжа">
-        <img class="photo-grid__item" src="Images/7.png" alt="Изображение горных вершин">
-        <img class="photo-grid__item" src="Images/8.png" alt="Изображние дорожного знака 'пешаходный переход'">
-        <img class="photo-grid__item" src="Images/9.png" alt="Изображение гор в тумане">
-        <img class="photo-grid__item" src="Images/10.png" alt="Изображение горы">
-        <img class="photo-grid__item" src="Images/11.png" alt="Изображение обрыва и моря">
-        <img class="photo-grid__item" src="Images/12.png" alt="Изображение тумана в горах">
+        <img class="photo-grid__item" src="images/1.png" alt="Изображение вида из окна поезда">
+        <img class="photo-grid__item" src="images/2.png" alt="Изображение горных вершин в облаках">
+        <img class="photo-grid__item" src="images/3.png" alt="Изображение рассвета в поле">
+        <img class="photo-grid__item" src="images/4.png" alt="Изображение туманного леса">
+        <img class="photo-grid__item" src="images/5.png" alt="Изображние авто на льду">
+        <img class="photo-grid__item" src="images/6.png" alt="Изображение пляжа">
+        <img class="photo-grid__item" src="images/7.png" alt="Изображение горных вершин">
+        <img class="photo-grid__item" src="images/8.png" alt="Изображние дорожного знака 'пешаходный переход'">
+        <img class="photo-grid__item" src="images/9.png" alt="Изображение гор в тумане">
+        <img class="photo-grid__item" src="images/10.png" alt="Изображение горы">
+        <img class="photo-grid__item" src="images/11.png" alt="Изображение обрыва и моря">
+        <img class="photo-grid__item" src="images/12.png" alt="Изображение тумана в горах">
     </section >
     <section class="places">
         <article class="place">
@@ -59,7 +59,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="#" target="_blank">park-kosa.ru</a>
             </div>
-            <img class="place__image" alt="Изображение моря" src="Images/20.png">
+            <img class="place__image" alt="Изображение моря" src="images/20.png">
             <div class="place__paragraphs">
                 <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                 <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -71,7 +71,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="#" target="_blank">National Geographic</a>
             </div>
-            <img class="place__image" alt="Изображение заснеженных гор" src="Images/21.png">
+            <img class="place__image" alt="Изображение заснеженных гор" src="images/21.png">
             <div class="place__paragraphs">
                 <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                 тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -86,7 +86,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="#" target="_blank">Facebook</a>
             </div>
-            <img class="place__image" alt="Изображение леса" src="Images/22.png">
+            <img class="place__image" alt="Изображение леса" src="images/22.png">
             <div class="place__paragraphs">
                 <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -100,7 +100,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="#" target="_blank">https://vk.com/baikalmile</a>
             </div>
-            <img class="place__image" alt="Изображение льда" src="Images/23.png">
+            <img class="place__image" alt="Изображение льда" src="images/23.png">
             <div class="place__paragraphs">
                 <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -115,7 +115,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="#" target="_blank">http://vodlozero.ru/</a>
             </div>
-            <img class="place__image" alt="Изображение реки и леса" src="Images/24.png">
+            <img class="place__image" alt="Изображение реки и леса" src="images/24.png">
             <div class="place__paragraphs">
                 <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
