--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,21 +12,21 @@
     <header class="header">
       <img src="images/logo__header.svg" class="header__logo" alt="Лого в виде карты России"> 
       <div class="header__lang-links">
-        <a href="#" target="_blank" class="header__lang-link header__lang-link_active" lang="ru">Ru</a>
-        <a href="#" target="_blank" class="header__lang-link" lang="en">En</a>
+        <a href="#" target="_blank" class="header__lang-link header__lang-link_active">Ru</a>
+        <a href="#" target="_blank" class="header__lang-link">En</a>
       </div>
     </header>  
-
+<main>
     <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__figure">
-        <img src="images/__image.png" class="lead__image" alt="Фотография девушки в поезде с видом в окно">
-        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+          <img src="images/__image.png" class="lead__image" alt="Фотография девушки в поезде с видом в окно">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
     </section>     
 
-    <div class="intro">
+    <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
@@ -36,7 +36,7 @@
             <li>Природных заповедников <span class="intro__number">105</span></li>
             <li>Аэропортов <span class="intro__number">241</span></li>
         </ul>
-    </div>
+    </section>
 
     <section class="photo-grid">
         <img class="photo-grid__item" src="images/1.png" alt="Изображение вида из окна поезда">
@@ -56,8 +56,8 @@
         <article class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">park-kosa.ru</a>
+                <p class="place__url-heading">url</p>
+                <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
             </div>
             <img class="place__image" alt="Изображение моря" src="images/20.png">
             <div class="place__paragraphs">
@@ -68,8 +68,8 @@
         <article class="place">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">National Geographic</a>
+                <p class="place__url-heading">url</p>
+                <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
             </div>
             <img class="place__image" alt="Изображение заснеженных гор" src="images/21.png">
             <div class="place__paragraphs">
@@ -83,8 +83,8 @@
         <article class="place">
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">Facebook</a>
+                <p class="place__url-heading">url</p>
+                <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
             </div>
             <img class="place__image" alt="Изображение леса" src="images/22.png">
             <div class="place__paragraphs">
@@ -97,8 +97,8 @@
         <article class="place">
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">https://vk.com/baikalmile</a>
+                <p class="place__url-heading">url</p>
+                <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
             </div>
             <img class="place__image" alt="Изображение льда" src="images/23.png">
             <div class="place__paragraphs">
@@ -112,8 +112,8 @@
         <article class="place">
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
-                <p class="place__url-heading">URL</p>
-                <a class="place__link" href="#" target="_blank">http://vodlozero.ru/</a>
+                <p class="place__url-heading">url</p>
+                <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
             </div>
             <img class="place__image" alt="Изображение реки и леса" src="images/24.png">
             <div class="place__paragraphs">
@@ -124,23 +124,25 @@
         </article>              
     </section>
 
-    <div class="cover">
-        <a class="cover__link">
+    <section class="cover">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
-    </div>
-
-    <section class="footer">
-        <div class="footer__links">
-            <a class="footer__link" href="#" target="_blank">Карты</a>
-            <a class="footer__link" href="#" target="_blank">Погода</a>
-            <a class="footer__link" href="#" target="_blank">Расписание</a>
-            <a class="footer__link" href="#" target="_blank">Календарь</a>
-            <a class="footer__link" href="#" target="_blank">Путешествия</a>
-        </div>    
-        <p class="footer__copyright">© 2020. Аня Орлова</p>
     </section>
+</main>
+    <footer class="footer">
+      <nav> 
+        <ul class="footer__links">
+            <li class="footer__link-item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+            <li class="footer__link-item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+            <li class="footer__link-item"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+            <li class="footer__link-item"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+            <li class="footer__link-item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+        </ul>   
+      </nav>    
+        <p class="footer__copyright">&copy; 2020. Аня Орлова</p>
+    </footer>
 
 </div>
 </body>
